--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon --exec babel-node server/index.js --presets env"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
@@ -15,6 +16,7 @@
     "mysql": "^2.15.0",
     "nodemon": "^1.17.3",
     "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
