--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "webpack -w --config webpack.config.js",
     "start": "nodemon --exec babel-node server/index.js --presets env",
     "sqldata": "mysql -u student -p < server/db/db.sql"
-
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,6 +17,8 @@
     "moment": "^2.22.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
