--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-dropzone": "^4.2.9",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
