--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack -w --config webpack.config.js",
     "start": "nodemon --exec babel-node server/index.js --presets env",
-    "sqldata": "mysql -u student -p < server/db/db.sql"
+    "sqldata": "mysql -u root -p < server/db/db.sql"
   },
   "dependencies": {
     "axios": "^0.18.0",
