--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.15.0",
     "nodemon": "^1.17.3",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
