--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^16.3.1",
     "react-dropzone": "^4.2.9",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "semantic-ui-react": "^0.79.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
