edited some stuff

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dropzone": "^4.2.9",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "semantic-ui-react": "^0.79.1"
+    "semantic-ui-react": "^0.79.1",
+    "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
